# nano-vllm-npu

./: Makefile  README.md  bench.py  example.py  pyproject.toml  test_snapkv.py
.github/workflows/: pypi.yml
bench/: random_generate.py
nanovllm/: __init__.py  config.py
nanovllm/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
nanovllm/layers/: activation.py  attention.py  embed_head.py  layernorm.py  linear.py  rotary_embedding.py
nanovllm/models/: qwen3.py
nanovllm/utils/: context.py
nanovllmnpu/: __init__.py  llm.py
nanovllmnpu/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
nanovllmnpu/layers/: attention.py  embed_head.py  linear.py  rotary_embedding.py  sampler.py
nanovllmnpu/models/: qwen3.py
tests/: example.py
